--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ memmap2 = "0.9"
 byteorder = "1.5"
 rand = "0.8"
 
+# Half-precision floating point support
+half = "2.4"
+
+# Arena allocator for efficient inference memory management
+bumpalo = "3.14"
+
 # BLAS support (optional)
 blas-src = { version = "0.10", optional = true }
 openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }
@@ -22,6 +28,11 @@ wide = { version = "0.7", optional = true }
 
 # Parallel processing (optional)
 rayon = { version = "1.10", optional = true }
+
+# GPU backends (optional)
+cudarc = { version = "0.11", optional = true }
+metal = { version = "0.29", optional = true }
+ocl = { version = "0.19", optional = true }
 
 [features]
 default = []
@@ -35,6 +46,10 @@ accelerate = ["ndarray/blas", "blas-src", "blas-src/accelerate"]
 simd = ["wide"]
 # Parallel processing with Rayon
 parallel = ["rayon", "ndarray/rayon"]
+# GPU backends
+cuda = ["cudarc"]
+metal-gpu = ["metal"]
+opencl = ["ocl"]
 
 [lib]
 name = "torchless"
@@ -58,3 +73,29 @@ harness = false
 [[bench]]
 name = "e2e_bench"
 harness = false
+
+# =============================================================================
+# Release Profile Optimizations
+# =============================================================================
+
+[profile.release]
+# Link-Time Optimization (LTO) - enables cross-crate inlining
+# "fat" LTO provides maximum optimization at the cost of longer compile times
+lto = "fat"
+# Use single codegen unit for better optimization (slower compile, faster runtime)
+codegen-units = 1
+# Abort on panic for smaller binary and slightly faster code
+panic = "abort"
+# Maximum optimization level
+opt-level = 3
+
+# Profile for profiling (optimized but with debug info for profilers)
+[profile.profiling]
+inherits = "release"
+debug = true
+
+# Profile for PGO instrumentation builds
+[profile.release-instrumented]
+inherits = "release"
+lto = false
+codegen-units = 16
