--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,10 @@ wide = { version = "0.7", optional = true }
 rayon = { version = "1.10", optional = true }
 
 # GPU backends (optional)
-cudarc = { version = "0.11", optional = true }
+# Note: cudarc requires specifying a CUDA version feature
+# Use cuda-12050 as it's the most recent stable version
+# Users can override this with CUDA_VERSION env var or by modifying features
+cudarc = { version = "0.11", optional = true, default-features = false, features = ["cuda-12050", "cublas", "driver", "nvrtc"] }
 metal = { version = "0.29", optional = true }
 ocl = { version = "0.19", optional = true }
 
@@ -48,6 +51,7 @@ simd = ["wide"]
 parallel = ["rayon", "ndarray/rayon"]
 # GPU backends
 cuda = ["cudarc"]
+rocm = []  # ROCm backend for AMD GPUs (requires ROCm runtime and rocBLAS installed)
 metal-gpu = ["metal"]
 opencl = ["ocl"]
 
