Implement Phase 7: Multi-Format Support
- Added support for loading models in GGUF and Safetensors formats, enhancing compatibility with the broader LLM ecosystem.
- Implemented format auto-detection for seamless loading of model files.
- Introduced new modules for GGUF and Safetensors format parsing, including detailed tensor metadata extraction.
- Updated Cargo.toml to include the Safetensors dependency.
- Enhanced documentation to reflect new features and usage examples for multi-format support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ rand = "0.8"
 # Half-precision floating point support
 half = "2.4"
 
+# Safetensors format support (Phase 7)
+safetensors = "0.4"
+
 # Arena allocator for efficient inference memory management
 bumpalo = "3.14"
 
