--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -20,7 +20,10 @@ jobs:
           - os: ubuntu-latest
             target: linux-x86_64
             ext: ""
-          - os: macos-13
+          - os: ubuntu-24.04-arm
+            target: linux-aarch64
+            ext: ""
+          - os: macos-14
             target: macos-x86_64
             ext: ""
           - os: macos-14
