--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -20,12 +20,12 @@ jobs:
           - os: ubuntu-latest
             target: linux-x86_64
             ext: ""
-            features: "simd,parallel,cuda,opencl"
+            features: "simd,parallel,cuda,opencl,rocm"
             install: "sudo apt-get update && sudo apt-get install -y ocl-icd-opencl-dev"
           - os: ubuntu-24.04-arm
             target: linux-aarch64
             ext: ""
-            features: "simd,parallel,cuda,opencl"
+            features: "simd,parallel,cuda,opencl,rocm"
             install: "sudo apt-get update && sudo apt-get install -y ocl-icd-opencl-dev"
           - os: macos-14
             target: macos-x86_64
