--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ rayon = { version = "1.10", optional = true }
 cudarc = { version = "0.11", optional = true, default-features = false, features = ["cuda-12050", "cublas", "driver", "nvrtc"] }
 metal = { version = "0.29", optional = true }
 ocl = { version = "0.19", optional = true }
+libloading = { version = "0.8", optional = true }
 
 [features]
 default = []
@@ -54,7 +55,7 @@ simd = ["wide"]
 parallel = ["rayon", "ndarray/rayon"]
 # GPU backends
 cuda = ["cudarc"]
-rocm = []  # ROCm backend for AMD GPUs (requires ROCm runtime and rocBLAS installed)
+rocm = ["libloading"]  # ROCm backend for AMD GPUs (requires ROCm runtime and rocBLAS installed)
 metal-gpu = ["metal"]
 opencl = ["ocl"]
 
