Implement WebGPU backend for cross-platform GPU acceleration
- Added support for WebGPU using the wgpu library, enabling GPU-accelerated inference across Linux, Windows, and macOS.
- Introduced a new `WebGPUBackend` struct implementing the `KernelBackend` trait for seamless integration with existing backend systems.
- Updated memory management with a dedicated `WebGPUMemoryPool` for efficient buffer reuse and allocation.
- Enhanced documentation to include WebGPU usage instructions and performance considerations.
- Modified CI workflows to include WebGPU feature testing and building, ensuring compatibility across platforms.
- Updated README and getting started guides to reflect new WebGPU capabilities and usage examples.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,13 +46,13 @@ jobs:
         run: python3 tests/generate_test_model.py
 
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --verbose --features webgpu
 
       - name: Check formatting
         run: cargo fmt --all -- --check
 
       - name: Run clippy
-        run: cargo clippy -- -D warnings
+        run: cargo clippy --features webgpu -- -D warnings
 
   build:
     name: Build (${{ matrix.name }})
@@ -90,9 +90,9 @@ jobs:
         shell: bash
         run: |
           if [ -n "${{ matrix.rust_target }}" ]; then
-            cargo build --release --verbose --target ${{ matrix.rust_target }}
+            cargo build --release --verbose --features webgpu --target ${{ matrix.rust_target }}
           else
-            cargo build --release --verbose
+            cargo build --release --verbose --features webgpu
           fi
 
       - name: Upload binary
