--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -21,31 +21,31 @@ jobs:
             target: linux-x86_64
             ext: ""
             archive: tar.gz
-            features: "simd,parallel,cuda,opencl,rocm"
+            features: "simd,parallel,cuda,opencl,rocm,webgpu"
             install: "sudo apt-get update && sudo apt-get install -y ocl-icd-opencl-dev"
           - os: ubuntu-24.04-arm
             target: linux-aarch64
             ext: ""
             archive: tar.gz
-            features: "simd,parallel,cuda,opencl,rocm"
+            features: "simd,parallel,cuda,opencl,rocm,webgpu"
             install: "sudo apt-get update && sudo apt-get install -y ocl-icd-opencl-dev"
           - os: macos-14
             target: macos-x86_64
             ext: ""
             archive: tar.gz
-            features: "simd,parallel,opencl,accelerate"
+            features: "simd,parallel,opencl,accelerate,webgpu"
             install: ""
           - os: macos-14
             target: macos-aarch64
             ext: ""
             archive: tar.gz
-            features: "simd,parallel,metal-gpu,opencl,accelerate"
+            features: "simd,parallel,metal-gpu,opencl,accelerate,webgpu"
             install: ""
           - os: windows-latest
             target: windows-x86_64
             ext: ".exe"
             archive: zip
-            features: "simd,parallel,cuda,opencl"
+            features: "simd,parallel,cuda,opencl,webgpu"
             install: "vcpkg install opencl:x64-windows && echo \"OPENCL_PATH=$VCPKG_INSTALLATION_ROOT\\installed\\x64-windows\" >> $GITHUB_ENV"
 
     steps:
