fix windows build issue with opencl library location

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
           - os: windows-latest
             target: windows-x86_64
             features: "simd,parallel,cuda,opencl,webgpu"
-            install: "vcpkg install opencl:x64-windows && echo \"OPENCL_PATH=$VCPKG_INSTALLATION_ROOT\\installed\\x64-windows\" >> $GITHUB_ENV"
+            install: "vcpkg install opencl:x64-windows && echo \"OPENCL_PATH=${VCPKG_INSTALLATION_ROOT}/installed/x64-windows\" >> $GITHUB_ENV"
             binary_path: target/release/torchless.exe
     steps:
       - uses: actions/checkout@v4
